--- a/src/projects.json
+++ b/src/projects.json
@@ -1,6 +1,6 @@
 [
     {
-        "image": "./images/pill-box.png",
+        "image": "https://www.josesgarcia.com/images/pill-box.png",
         "title": "Pill Box",
         "description": "Application to help caretakers efficiently manage their patients' medication.",
         "deployed": "https://infinite-mesa-67411.herokuapp.com/",
