Add technologies key and value to each project object in json file.

--- a/src/projects.json
+++ b/src/projects.json
@@ -4,6 +4,7 @@
         "image": "https://www.josesgarcia.com/images/pill-box.png",
         "title": "Pill Box",
         "description": "Application to help caretakers efficiently manage their patients' medication.",
+        "technologies": "JavaScript, jQuery, Handlebars, MySQL, HTML5, and CSS3.",
         "deployed": "https://infinite-mesa-67411.herokuapp.com/",
         "repo": "https://github.com/chavalk/Pill-Box"
     },
@@ -12,6 +13,7 @@
         "image": "https://www.josesgarcia.com/images/food-truck-finder.png",
         "title": "Food Truck Finder",
         "description": "Application used to find food trucks based on a user's current location.",
+        "technologies": "Javascript, jQuery, HTML5, CSS3, Open Weather API, and Google Places API.",
         "deployed": "https://chavalk.github.io/Food-Truck-Finder/",
         "repo": "https://github.com/chavalk/Food-Truck-Finder"
     },
@@ -20,6 +22,7 @@
         "image": "https://www.josesgarcia.com/images/employee-directoy.png",
         "title": "Employee Directory",
         "description": "Employee Directory is a front-end application built with React.js.",
+        "technologies": "React.js, JSX, HTML5, CSS3, and Random User API.",
         "deployed": "https://chavalk.github.io/employee-directory/",
         "repo": "https://github.com/chavalk/employee-directory"
     },
@@ -28,6 +31,7 @@
         "image": "https://www.josesgarcia.com/images/budget-tracker.png",
         "title": "Budget Tracker",
         "description": "A progressive web application to keep track of additions and deductions to a budget.",
+        "technologies": "MongoDB, Mongoose, JavaScript, HTML5, and CSS3.",
         "deployed": "https://guarded-reaches-27987.herokuapp.com/",
         "repo": "https://github.com/chavalk/budget-tracker"
     },
@@ -36,6 +40,7 @@
         "image": "https://www.josesgarcia.com/images/workout-tracker.png",
         "title": "Workout Tracker",
         "description": "An application to allow users to keep track of workouts and the exercises in each workout.",
+        "technologies": "Express, MongoDB, HTML5, and CSS3.",
         "deployed": "https://floating-savannah-96499.herokuapp.com/?id=603fe2e65939a1001567da4c",
         "repo": "https://github.com/chavalk/workout-tracker"
     },
@@ -44,6 +49,7 @@
         "image": "https://www.josesgarcia.com/images/burger.png",
         "title": "Eat-Da-Burger!",
         "description": "Application allows users to add burger names and devour them.",
+        "technologies": "MySQL, JavaScript, Express, Handlebars, HTML5, and CSS3.",
         "deployed": "https://thawing-island-13237.herokuapp.com/",
         "repo": "https://github.com/chavalk/burger"
     }
